# origin

./: .gitignore  .mcpignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  MCP_SETUP.md  README.md  config.coach-player.example.toml  config.example.toml
.cargo/: config.toml
agents/: fowler.md
crates/g3-console/: CLAUDE.md  COACH_FEEDBACK_RESPONSE.md  Cargo.toml  FIXES_APPLIED.md  FIXES_ROUND2.md  FIXES_ROUND3.md  FIXES_ROUND4.md  IMPLEMENTATION_FIXES.md  IMPLEMENTATION_REVIEW.md  README.md  WEBDRIVER_TEST_REPORT.md
crates/g3-console/src/: launch.rs  lib.rs  logs.rs  main.rs
crates/g3-console/src/api/: control.rs  state.rs
crates/g3-console/src/models/: mod.rs
crates/g3-console/src/process/: controller.rs  detector.rs
crates/g3-console/web/: index.html
crates/g3-console/web/js/: api.js  app.js  components.js  file-browser.js  router.js  state.js
crates/g3-console/web/public/: index.html
crates/g3-console/web/src/: App.jsx  main.jsx
crates/g3-console/web/src/components/: ChatView.jsx  GitStatus.jsx  InstancePanel.jsx  NewRunModal.jsx  ProgressBar.jsx  StatusBadge.jsx  ToolCall.jsx
crates/g3-console/web/src/pages/: Detail.jsx  Home.jsx
crates/g3-console/web/src/styles/: hero-ui.css
crates/g3-console/web/styles/: app.css
crates/g3-ensembles/: CLAUDE.md  Cargo.toml  TESTING.md
crates/g3-ensembles/src/: flock.rs  lib.rs  status.rs  tests.rs
crates/g3-ensembles/tests/: integration_tests.rs
crates/g3-planner/: CLAUDE.md  Cargo.toml
crates/g3-planner/src/: git.rs  history.rs  lib.rs  llm.rs  planner.rs  prompts.rs  state.rs
crates/g3-planner/tests/: commit_history_ordering_test.rs  retry_feedback_test.rs
g3-plan/: completed_requirements_2025-12-08_18-30-00.md  completed_requirements_2025-12-09_16-16-51.md  completed_requirements_2025-12-09_22-43-24.md  completed_requirements_2025-12-10_10-35-18.md  completed_requirements_2025-12-10_16-17-02.md  completed_requirements_2025-12-11_10-05-08.md  completed_requirements_2025-12-11_14-55-22.md  completed_todo_2025-12-09_16-16-51.md  completed_todo_2025-12-09_22-43-24.md  completed_todo_2025-12-10_10-35-18.md  completed_todo_2025-12-10_16-17-02.md  completed_todo_2025-12-11_10-05-08.md  completed_todo_2025-12-11_14-55-22.md  new_requirements.md  planner_history.txt
scripts/: setup-chrome-for-testing.sh
(+90 files in other folders)
